@@ -282,9 +282,9 @@ bcon_new (void *unused, ...) BSON_GNUC_NULL_TERMINATED;
 #define BCON_NEW(...) bcon_new (NULL, __VA_ARGS__, (void *) NULL)
 
 BSON_EXPORT (const char *)
-bson_bcon_magic (void) BSON_GNUC_CONST;
+bson_bcon_magic (void) BSON_GNUC_PURE;
 BSON_EXPORT (const char *)
-bson_bcone_magic (void) BSON_GNUC_CONST;
+bson_bcone_magic (void) BSON_GNUC_PURE;
 
 
 BSON_END_DECLS
