@@ -36,7 +36,7 @@ bson_context_new (bson_context_flags_t flags);
 BSON_EXPORT (void)
 bson_context_destroy (bson_context_t *context);
 BSON_EXPORT (bson_context_t *)
-bson_context_get_default (void) BSON_GNUC_CONST;
+bson_context_get_default (void);
 
 
 BSON_END_DECLS
