@@ -9,7 +9,7 @@ Synopsis
 .. code-block:: c
 
   const mongoc_index_opt_t *
-  mongoc_index_opt_get_default (void) BSON_GNUC_CONST;
+  mongoc_index_opt_get_default (void) BSON_GNUC_PURE;
 
 Returns
 -------
