@@ -44,7 +44,7 @@ struct _mongoc_ssl_opt_t {
 
 
 MONGOC_EXPORT (const mongoc_ssl_opt_t *)
-mongoc_ssl_opt_get_default (void) BSON_GNUC_CONST;
+mongoc_ssl_opt_get_default (void) BSON_GNUC_PURE;
 
 
 BSON_END_DECLS
